<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D22864"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:inputType="textPassword"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/loginBotton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:padding="12dp"
        />
    <TextView
        android:id="@+id/loginPageQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />

</LinearLayout>